// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document-blueprint-tree ancestors should get ancestor items 1`] = `
{
  "content": [
    {
      "text": "[{"documentType":null,"isFolder":true,"name":"_Test Folder Blueprint","id":"00000000-0000-0000-0000-000000000000","parent":null,"hasChildren":true},{"documentType":null,"isFolder":false,"name":"_Test Child Blueprint","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"hasChildren":false}]",
      "type": "text",
    },
  ],
}
`;

exports[`document-blueprint-tree ancestors should handle non-existent item 1`] = `
{
  "content": [
    {
      "text": "[]",
      "type": "text",
    },
  ],
}
`;

exports[`document-blueprint-tree children should get child items 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"documentType":{"id":"e68abe48-7646-4ef4-abb8-f1a5b24b27cc","icon":"icon-settings color-pink","collection":null},"isFolder":false,"name":"_Test Child Blueprint","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`document-blueprint-tree children should handle non-existent parent 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`document-blueprint-tree root should get root items 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"documentType":{"id":"e68abe48-7646-4ef4-abb8-f1a5b24b27cc","icon":"icon-settings color-pink","collection":null},"isFolder":false,"name":"_Test Root Blueprint","id":"00000000-0000-0000-0000-000000000000","parent":null,"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;
